@@ -1,6 +1,8 @@
 package com.seatsecure.backend;
 
 import java.sql.Date;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.boot.CommandLineRunner;
@@ -23,14 +25,21 @@ public class SeatsecureBackendApplication {
 	public static void main(String[] args) {
 		ApplicationContext ac = SpringApplication.run(SeatsecureBackendApplication.class, args);
 
-		Event event = Event.builder().name("First event").startDate(new Date(System.currentTimeMillis()))
+		Event event1 = Event.builder().name("First event").startDate(new Date(System.currentTimeMillis()))
 				.endDate(new Date(System.currentTimeMillis())).build();
+		
+		Event event2 = Event.builder().name("Second event").startDate(new Date(System.currentTimeMillis()))
+				.endDate(new Date(System.currentTimeMillis())).build();
+		
 		Venue venue = Venue.builder().name("National stadium").address("Address of national stadium")
-				.eventsList(List.of(event)).build();
-		event.setVenue(venue);
+				.eventsList(new ArrayList<>(Arrays.asList(event1))).build();
 
+		event1.setVenue(venue);
+		event2.setVenue(venue);
+		venue.getEventsList().add(event2);
 		EventRepository eventRepo = ac.getBean(EventRepository.class);
-		eventRepo.save(event); // Automatically inserts new venue into venueRepo
+		eventRepo.save(event1);
+		eventRepo.save(event2); // Automatically inserts new venue into venueRepo
 
 	}
 
